Updated player content styles to stop cutting off images, and set up our images for the subscription lock to be 16x9

--- a/assets/sass/_video.scss
+++ b/assets/sass/_video.scss
@@ -19,6 +19,9 @@
   margin-right: auto;
   .player-content-inner {
     padding-top: 35%;
+    /* The min-height is based on the size of the
+       display pictures for the video banner */
+    min-height: 745px;
     width: 100%;
     position: relative;
     display: block;
